* Make these HttpClient methods public: SetFormVariable, ClearFormVariable, SubmitForm
* FAQ: No change to "get" without postback (eg, tracker #1106130)
* Look into HtmlAgilityPack HTML parser: http://blogs.msdn.com/smourier/archive/2003/06/04/8265.aspx
* FAQ: <csc> error: lib/nant/nant.exe.config <platform name="win32" default="net-1.1">  (Cory Foy, "Build problems," 4/11-4/13/05)
* HTML controls: HtmlAnchor, HtmlButton, HtmlImage, HtmlInputButton, HtmlInputCheckBox, HtmlInputFile, HtmlInputHidden, HtmlInputImage, HtmlInputRadioButton, HtmlInputText, HtmlSelect, HtmlTable, HtmlTextArea


Before release:
* Update build: remove NUnit, put NUnitAdapter.cs in bin/ dir
* Copy new constructors to every tester (don't forget WebFormTester)
* Finish migration guide.
* Remove ControlTester.EnterInputValue/RemoveInputValue?  Make AssertEnabled explicit in tester?


Changes in CVS:
Produced by Jim Shore.
* Added FAQ: How to test sites that require authentication.  Credit to Jim Shore.
* Removed NUnit requirement.  NUnitAsp now works with any test framework.  Credit to Jim Shore.
* Replaced Browser property with HttpClient.Default static property.  Credit to Jim Shore.
* Replaced CurrentWebForm property with single-parameter constructor for testers.  Credit to Jim Shore.
* Created NUnitAdapter.cs file that provides backwards compatibility and quick-start for NUnit users.  Credit Jim Shore.
* Created new migration guide for v1.6.  Removed old NUnit 2.0 migration guide.  Credit to Jim Shore.
* Renamed WebForm to WebFormTester.  Credit to Jim Shore.
* Added "Variables" property to WebFormTester and created FormVariables class to enable direct control and access to form variables.  Credit to Jim Shore.
* Added support for multiple forms.  Credit to Jim Shore.
* Added ability for tests to submit and post-back forms.  Credit to Jim Shore.
* Updated FAQ: How to compile with NAnt under .NET 1.1.  Credit to Cory Foy and Ted Husted.