@@ -103,6 +103,7 @@
               </td>
               <td>
                 HtmlAnchor
+                <br /><b>HtmlButton (new!)</b>
                 <br />HtmlInputCheckBox
               </td>
             </tr>
