@@ -29,7 +29,32 @@ namespace NUnit.Extensions.Asp.HtmlTester
 	/// </summary>
 	public abstract class HtmlControlTester : ControlTester
 	{
-		private bool runAtServer;
+		private bool runAtServer = false;   // note: delete me
+
+		/// <summary>
+		/// Create a tester for an HTML tag.  Use this constructor
+		/// for testing most tags.
+		/// </summary>
+		/// <param name="aspId">The ID of the control to test (look in the
+		/// page's ASP.NET source code for the ID).</param>
+		public HtmlControlTester(string htmlId) : base(htmlId)
+		{
+		}
+
+		/// <summary>
+		/// Create a tester for a server-side HTML control.  Use this constructor
+		/// when the HTML tag you are testing has the "runat='server'" attribute.
+		/// </summary>
+		/// <param name="aspId">The ID of the control to test (look in the
+		/// page's ASP.NET source code for the ID).</param>
+		/// <param name="container">A tester for the control's container.  
+		/// (In the page's ASP.NET source code, look for the tag that the
+		/// control is nested in.  That's probably the control's
+		/// container.  Use "CurrentWebForm" if you're not sure; it will
+		/// probably work.)</param>
+		public HtmlControlTester(string aspId, Tester container) : this(aspId, container, true)
+		{
+		}
 
 		/// <summary>
 		/// Create the tester and link it to an ASP.NET control.
