@@ -247,6 +247,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "HtmlTester\HtmlButtonTest.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "HtmlTester\HtmlControlTest.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
