@@ -7,14 +7,16 @@ To do:
 * FAQ: No change to "get" without postback (eg, tracker #1106130)
 * Look into HtmlAgilityPack HTML parser: http://blogs.msdn.com/smourier/archive/2003/06/04/8265.aspx
 * FAQ: <csc> error: lib/nant/nant.exe.config <platform name="win32" default="net-1.1">  (Cory Foy, "Build problems," 4/11-4/13/05)
-* HTML controls: HtmlAnchor, HtmlButton, HtmlImage, HtmlInputButton, HtmlInputCheckBox, HtmlInputFile, HtmlInputHidden, HtmlInputImage, HtmlInputRadioButton, HtmlInputText, HtmlSelect, HtmlTable, HtmlTextArea
+* HTML controls: HtmlButton, HtmlImage, HtmlInputButton, HtmlInputCheckBox, HtmlInputFile, HtmlInputHidden, HtmlInputImage, HtmlInputRadioButton, HtmlInputText, HtmlSelect, HtmlTable, HtmlTextArea
+* Instantiating HTML controls by XPath in addition to ID
 
 
 Before release:
 * Update build: remove NUnit, put NUnitAdapter.cs in bin/ dir
-* Copy new constructors to every tester (don't forget WebFormTester)
+* Copy new constructors to every tester (don't forget WebFormTester and HTML testers)
 * Finish migration guide.
 * Remove ControlTester.EnterInputValue/RemoveInputValue?  Make AssertEnabled explicit in tester?
+* Mark 'runAtServer' HTML constructor as obsolete?
 
 
 Changes in CVS:
@@ -31,6 +33,7 @@ Produced by Jim Shore.
 * Added ability for tests to submit and post-back forms.  Credit to Jim Shore.
 * Updated FAQ: How to compile with NAnt under .NET 1.1.  Credit to Cory Foy and Ted Husted.
 * Changed LinkButtonTester to NOT check if the link is disabled.  Credit to Jim Shore.
+* Added HtmlButtonTester.  Credit to Jim Shore.
 
 
 Changes in NUnitAsp 1.5.1:
